# Scholar-Assistant

./: .env.example  .gitignore  AGENTS.md  README.md  continuation_plan.md  implementation_report.md  notes.md  phase2_notes.md  phase2_optimization_report.md  phase2_plan.md  pyproject.toml  requirement_audit.md  requirement_audit_notes.md  requirement_audit_plan.md  supplement_plan.md  supplement_report.md  task_plan.md
docs/: architecture.md  data-model.md
scripts/: __init__.py  mcp_stdio_smoke.py  retrieval_smoke.py
src/scholar_assistant/: __init__.py
src/scholar_assistant/agents/: analyst.py  reader.py  searcher.py  verifier.py
src/scholar_assistant/cli/: app.py  exec_command.py  rendering.py
src/scholar_assistant/core/: budget.py  config.py  events.py  orchestrator.py  permissions.py  planner.py  quality_gate.py  reporting.py  state_machine.py
src/scholar_assistant/mcp/: codex_client.py  server.py  stdio_smoke.py
src/scholar_assistant/providers/: base.py  deepseek.py  kimi.py  openai_compatible.py  router.py
src/scholar_assistant/retrieval/: bm25.py  device.py  diversity.py  embeddings.py  fusion.py  model_smoke.py  reranker.py
src/scholar_assistant/schemas/: __init__.py  events.py  evidence.py  paper.py  research.py  task.py
tests/fixtures/: arxiv_sample.xml
tests/integration/: test_orchestrator_cli_mcp.py  test_phase2_live_markers.py  test_phase2_mcp_stdio.py
tests/unit/: test_phase2_quality_and_models.py  test_phase2_sources_dedup_budget.py  test_provider.py  test_retrieval_and_tools.py  test_storage_quality_pdf.py
(+13 files in other folders)
