[project]
name = "scholar-assistant"
version = "0.1.0"
description = "Local academic research agent with evidence-first search, reading, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pymupdf>=1.24.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
ml = [
    "FlagEmbedding>=1.2.10",
    "torch>=2.2.0",
]

[project.scripts]
scholar = "scholar_assistant.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
